; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_compress_fragment.c_EmitUncompressedMetaBlock.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_compress_fragment.c_EmitUncompressedMetaBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i64*, i64, i64*, i64*)* @EmitUncompressedMetaBlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @EmitUncompressedMetaBlock(i64* %0, i64* %1, i64 %2, i64* %3, i64* %4) #0 {
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  store i64* %0, i64** %6, align 8
  store i64* %1, i64** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  store i64* %4, i64** %10, align 8
  %12 = load i64*, i64** %7, align 8
  %13 = load i64*, i64** %6, align 8
  %14 = ptrtoint i64* %12 to i64
  %15 = ptrtoint i64* %13 to i64
  %16 = sub i64 %14, %15
  %17 = sdiv exact i64 %16, 8
  store i64 %17, i64* %11, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i64*, i64** %9, align 8
  %20 = load i64*, i64** %10, align 8
  %21 = call i32 @RewindBitPosition(i64 %18, i64* %19, i64* %20)
  %22 = load i64, i64* %11, align 8
  %23 = load i64*, i64** %9, align 8
  %24 = load i64*, i64** %10, align 8
  %25 = call i32 @BrotliStoreMetaBlockHeader(i64 %22, i32 1, i64* %23, i64* %24)
  %26 = load i64*, i64** %9, align 8
  %27 = load i64, i64* %26, align 8
  %28 = add i64 %27, 7
  %29 = and i64 %28, 4294967288
  %30 = load i64*, i64** %9, align 8
  store i64 %29, i64* %30, align 8
  %31 = load i64*, i64** %10, align 8
  %32 = load i64*, i64** %9, align 8
  %33 = load i64, i64* %32, align 8
  %34 = lshr i64 %33, 3
  %35 = getelementptr inbounds i64, i64* %31, i64 %34
  %36 = load i64*, i64** %6, align 8
  %37 = load i64, i64* %11, align 8
  %38 = call i32 @memcpy(i64* %35, i64* %36, i64 %37)
  %39 = load i64, i64* %11, align 8
  %40 = shl i64 %39, 3
  %41 = load i64*, i64** %9, align 8
  %42 = load i64, i64* %41, align 8
  %43 = add i64 %42, %40
  store i64 %43, i64* %41, align 8
  %44 = load i64*, i64** %10, align 8
  %45 = load i64*, i64** %9, align 8
  %46 = load i64, i64* %45, align 8
  %47 = lshr i64 %46, 3
  %48 = getelementptr inbounds i64, i64* %44, i64 %47
  store i64 0, i64* %48, align 8
  ret void
}

declare dso_local i32 @RewindBitPosition(i64, i64*, i64*) #1

declare dso_local i32 @BrotliStoreMetaBlockHeader(i64, i32, i64*, i64*) #1

declare dso_local i32 @memcpy(i64*, i64*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
